test/Fail/Issue1944-internal-error.err
Issue1944-internal-error.agda:26.10-15: error: [UnequalTerms]
Set₁ !=< R
when checking that the expression out x has type R
